css/elements.css
.logo {
    width: 30%;
    display:block;
    margin: 10px auto;
}
@media screen and (max-width: 992px) {
    .logo {
        width: 70%;
    }
}

@media screen and (max-width: 768px) {
    .logo {
        width: 60%;
    }
}

@media screen and (max-width: 420px) {
    .logo {
        width: 100%;
    }
}

#main-header {
    margin: 20px 40px 0;
    position: relative;
    z-index: 999999
}

#main-header.centered {
    text-align: center
}

#main-header.centered .main-nav, #main-header.centered a.brand {
    width: 100%;
    float: none;
    display: inline-block;
    padding-bottom: 20px
}

#main-header a.brand {
    text-decoration: none;
    position: relative;
    z-index: 9999
}

#main-header a.brand .name {
    font-family: Poppins, Helvetica Neue, Helvetica, sans-serif;
    font-size: 1.15em;
    margin-right: 20px
}

#main-header a.brand .title {
    font-size: 1.15em;
    color: #888
}

@media screen and (max-width: 992px) {
    #main-header {
        margin: 25px 15px 0;
        height: auto
    }
}

@media screen and (min-width: 992px) {
    #main-sidebar {
        position: fixed;
        left: 0;
        bottom: 0;
        top: 0;
        width: 300px;
        z-index: 999
    }

    #main-sidebar.centered {
        text-align: center
    }

    #main-sidebar.centered .main-nav, #main-sidebar.centered a.brand {
        float: none;
        display: block;
        padding-bottom: 20px
    }

    #main-sidebar.centered .main-nav ul.dropdown li {
        text-align: center
    }

    #main-sidebar a.brand {
        text-decoration: none;
        position: relative;
        z-index: 99;
        margin: 50px;
        display: block
    }

    #main-sidebar a.brand .name, #main-sidebar a.brand .title {
        width: 100%;
        display: block
    }

    #main-sidebar a.brand .name {
        font-family: Poppins, Helvetica Neue, Helvetica, sans-serif;
        font-size: 1.15em;
        margin-right: 20px
    }

    #main-sidebar a.brand .title {
        font-size: 1.15em;
        color: #888
    }

    #wrapper.sidebar {
        padding-left: 300px;
        margin: 0
    }

    #wrapper.sidebar .main {
        padding: 0;
        margin: 4px
    }
}

@media screen and (max-width: 992px) {
    #main-sidebar {
        padding: 25px 15px 0;
        display: inline-block;
        width: 100%;
        vertical-align: top
    }

    #main-sidebar .bg {
        display: none
    }

    a.brand {
        text-decoration: none;
        position: relative;
        z-index: 9999;
        display: inline-block;
        margin-top: 1px
    }

    a.brand .name {
        font-family: Poppins, Helvetica Neue, Helvetica, sans-serif;
        font-size: 1.15em;
        margin-right: 20px
    }
}

.main-nav {
    font-family: Poppins, Helvetica Neue, Helvetica, sans-serif
}

.main-nav ul {
    list-style: none;
    margin: 0;
    padding: 0
}

.main-nav ul li {
    position: relative;
    z-index: 99999
}

.main-nav ul li a {
    text-decoration: none;
    font-size: 1.1em;
    color: #fff;
    opacity: .7;
    -webkit-transition: all .5s;
    transition: all .5s
}

.main-nav ul li a.active, .main-nav ul li a:focus, .main-nav ul li a:hover {
    opacity: 1;
    outline: none;
    text-decoration: none
}

.main-nav ul li .dropdown {
    text-align: left
}

@media screen and (min-width: 992px) {
    .responsive-nav {
        display: none
    }

    #main-header .main-nav {
        float: right;
        margin-top: 3px
    }

    #main-header .main-nav ul li {
        display: inline-block;
        margin: 0 10px
    }

    #main-header .main-nav ul li:last-child {
        margin-right: 0
    }

    #main-header .main-nav ul li ul.dropdown {
        position: absolute;
        left: 0;
        top: -10px;
        padding-top: 20px;
        max-width: 250px;
        opacity: 0;
        z-index: -1;
        -webkit-transition: all .3s;
        transition: all .3s;
        visibility: hidden
    }

    #main-header .main-nav ul li ul.dropdown:before {
        content: '';
        position: absolute;
        display: block;
        background: rgba(25, 25, 25, .9);
        left: -30px;
        right: -30px;
        top: -150px;
        bottom: -20px;
        pointer-events: none
    }

    #main-header .main-nav ul li ul.dropdown li {
        display: block;
        margin: 10px 0
    }

    #main-header .main-nav ul li ul.dropdown li:last-child {
        padding-right: 10px
    }

    #main-header .main-nav ul li ul.dropdown li a {
        white-space: nowrap;
        font-family: HK Grotesk, Helvetica Neue, Helvetica, sans-serif
    }

    #main-header .main-nav ul li:hover ul.dropdown {
        top: 15px;
        opacity: 1;
        -webkit-transition: all .4s;
        transition: all .4s;
        visibility: visible
    }

    #main-sidebar .main-nav {
        position: absolute;
        display: block;
        left: 50px;
        bottom: 30px;
        right: 50px
    }

    #main-sidebar .main-nav ul li {
        margin: 25px 0
    }

    #main-sidebar .main-nav ul li ul.dropdown {
        visibility: hidden;
        max-height: 0;
        overflow: hidden;
        opacity: 0;
        position: relative;
        width: 100%;
        -webkit-transition: all .3s;
        transition: all .3s
    }

    #main-sidebar .main-nav ul li ul.dropdown li {
        display: block;
        margin: 10px 0;
        font-size: .9em;
        font-family: HK Grotesk, Helvetica Neue, Helvetica, sans-serif
    }

    #main-sidebar .main-nav ul li:hover a {
        color: #fff
    }

    #main-sidebar .main-nav ul li:hover ul.dropdown {
        opacity: 1;
        visibility: visible;
        max-height: 100vh;
        -webkit-transition: all 1.2s;
        transition: all 1.2s
    }

    #main-sidebar .main-nav ul li:hover ul.dropdown a {
        color: #fff;
        opacity: .7
    }

    #main-sidebar .main-nav ul li:hover ul.dropdown a:hover {
        opacity: 1
    }
}
/* ... */

